# knowledge

./: .gitignore  AGENTS.md  CAPTURE_CHECKLIST.md  CLAUDE.md  README.md  goals.md  newnote.sh
.claude/: settings.json
2025-annual-review/: career-path-self-evaluation.md  requirements.md  review-question-mapping.md  work-by-quarter.md  work-summary.md
active-days/: README.md  heartbeat-analysis.md  iesha-williams-investigation.md  initial-investigation.md
agent-quintiles-support/: README.md  agent-tier-logic.md  coaching-plan-badge-plan.md  coaching-quintile-consistency-investigation.md  convi-6219-investigation.md  convi-6219-qa-score-impl-plan.md  convi-6219-qa-score-investigation.md  extract-shared-boolean-filter.md  fe-investigation.md  implementation-plan.md  investigation.md  outcome-quintile-investigation.md  per-criterion-quintile-investigation.md  pr-phase-1.1.md  pr-validation.md  quintile-rank-behaviour-reference.md  requirements.md
agent-stats-active-days-fix/: README.md  investigation.md
alo/: README.md  engineering-design-review-guide.md  project.yaml
auto-backfill-missing-scorecards/: auto-heal-design.md  implementation-and-validation-summary.md  investigation.md  retrieveDirectorTaskStats_request.json  retrieveDirectorTaskStats_response.json  retrieveQAScoreStats_response.json  rollout-plan.md  scorecard-count-api-mismatch.md  stale-scorecard-consistency-investigation.md
convi-5565-scorecard-ch-pg-sync/tools/test_async_order/: BUILD.bazel  main.go
convi-5565-scorecard-ch-pg-sync/tools/verify_sync/: BUILD.bazel  main.go
nascore/: README.md  (+20 more)
(+483 files in other folders)
